--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.3.2",
     "element-ui": "^2.4.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -36,7 +37,7 @@
     ],
     "rules": {
       "no-console": "off"
-     },
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
